Re-adding the only change in RollupAsyncProcessor that might be causing test regressions. Added in automation to maintain the current rollup version and append that to log messages (thanks @jongpie!), testing Nebula Logger Adapter automatic package creation [skip ci]

--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -1121,6 +1121,18 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   private void winnowCalcItemsAndCheckReparenting(RollupAsyncProcessor roll, List<SObject> localCalcItems, Map<String, List<SObject>> oldLookupItems) {
     for (Integer index = localCalcItems.size() - 1; index >= 0; index--) {
       SObject calcItem = localCalcItems[index];
+      Boolean doesNotMatchCurrentItem = roll.eval.matches(calcItem) == false;
+      if (
+        roll.metadata?.IsFullRecordSet__c == true &&
+        (doesNotMatchCurrentItem && (this.oldCalcItems.containsKey(calcItem.Id) == false || roll.eval.matches(this.oldCalcItems.get(calcItem.Id)) == false))
+      ) {
+        RollupLogger.Instance.log('removed item!', calcItem, LoggingLevel.ERROR);
+        // technically it should only be possible for a calc item that doesn't match
+        // to still exist if it is a Full Record Set operation; this gives people the chance
+        // to reset rollup values if none of the records passed in match the eval criteria
+        localCalcItems.remove(index);
+        continue;
+      }
       // Check for reparented records
       SObject oldCalcItem = this.oldCalcItems?.get(calcItem.Id);
 
