--- a/plugins/NebulaLogger/classes/RollupNebulaLoggerAdapter.cls
+++ b/plugins/NebulaLogger/classes/RollupNebulaLoggerAdapter.cls
@@ -6,6 +6,6 @@ public class RollupNebulaLoggerAdapter extends RollupLogger {
 
   protected override void innerLog(String logString, Object logObject, LoggingLevel logLevel) {
     logString = logString + '\n' + this.getLogStringFromObject(logObject);
-    Logger.newEntry(logLevel, logString);
+    Logger.newEntry(logLevel, this.getBaseLoggingMessage() + logString);
   }
 }
