Added base logging string to custom object logger plugin

--- a/rollup/core/classes/RollupLogger.cls
+++ b/rollup/core/classes/RollupLogger.cls
@@ -1,4 +1,5 @@
 public without sharing virtual class RollupLogger extends Rollup implements ILogger {
+  @TestVisible
   // this gets updated via the pipeline as the version number gets incremented
   private static final String CURRENT_VERSION_NUMBER = 'v1.3.22';
   @TestVisible
