Fixes #230 by adding proper COUNT support and default value support for checkbox fields

--- a/extra-tests/classes/RollupFieldInitializerTests.cls
+++ b/extra-tests/classes/RollupFieldInitializerTests.cls
@@ -38,6 +38,11 @@ private class RollupFieldInitializerTests {
   }
 
   @IsTest
+  static void shouldProperlyInitializeCheckboxDefaults() {
+    System.assertEquals(false, RollupFieldInitializer.Current.getDefaultValue(Account.CheckboxFormula__c));
+  }
+
+  @IsTest
   static void shouldReturnDefaultsForPicklist() {
     List<Schema.PicklistEntry> picklistEntries = Account.Industry.getDescribe().getPicklistValues();
     if (picklistEntries.isEmpty()) {
